CloudFormation/EC2/full-app-with-scale-alb.yaml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: Full scale of Web Server and MySQL database that can scalable with Application
  Load Balaner.
Metadata: {}
Parameters:
  EnvironmentName:
    Description: An environment name
    Type: String
  VpcCIDR:
    Description: IP range for this VPC
    Default: 10.0.0.1/16
    Type: String
  FirstPublicSubnetCIDR:
    Description: IP range for first public subnet
    Default: 10.0.10.1/24
    Type: String
  SecondPublicSubnetCIDR:
    Description: IP range for second public subnet
    Default: 10.0.11.1/24
    Type: String
  FirstPrivateSubnetCIDR:
    Description: IP range for first public subnet
    Default: 10.0.20.1/24
    Type: String
  SecondPrivateSubnetCIDR:
    Description: IP range for second public subnet
    Default: 10.0.21.1/24
    Type: String
  DBInstanceClass:
    Default: db.m5.large
    Description: DB instance class
    Type: String
    ConstraintDescription: Must select a valid DB instance type.
  DBAllocatedStorage:
    Default: '50'
    Description: The size of the database (GiB)
    Type: Number
    MinValue: '5'
    MaxValue: '1024'
    ConstraintDescription: must be between 20 and 65536 GiB.
  DBUsername:
    NoEcho: 'true'
    Description: Username for MySQL database access
    Type: String
    MinLength: '1'
    MaxLength: '16'
    AllowedPattern: "[a-zA-Z][a-zA-Z0-9]*"
    ConstraintDescription: must begin with a letter and contain only alphanumeric
      characters.
  DBPassword:
    NoEcho: 'true'
    Description: Password MySQL database access
    Type: String
    MinLength: '8'
    MaxLength: '41'
    AllowedPattern: "[a-zA-Z0-9]*"
    ConstraintDescription: must contain only alphanumeric characters.
Mappings: {}
Conditions: {}
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock:
        Ref: VpcCIDR
      EnableDnsHostnames: true
      Tags:
      - Key: Name
        Value:
          Ref: EnvironmentName
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value:
          Ref: EnvironmentName
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPC
      InternetGatewayId:
        Ref: InternetGateway
  FirstPublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: FirstPublicSubnetCIDR
      AvailabilityZone:
        Fn::Select:
        - 0
        - Fn::GetAZs: ''
      MapPublicIpOnLaunch: true
      Tags:
      - Key: Name
        Value:
          Fn::Sub:
          - "${EnivronmentName} Public Subnet (AZ1)"
          - EnivronmentName:
              Ref: EnvironmentName
  SecondPublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: SecondPublicSubnetCIDR
      AvailabilityZone:
        Fn::Select:
        - 1
        - Fn::GetAZs: ''
      MapPublicIpOnLaunch: true
      Tags:
      - Key: Name
        Value:
          Fn::Sub:
          - "${EnivronmentName} Public Subnet (AZ2)"
          - EnivronmentName:
              Ref: EnvironmentName
  FirstPrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: FirstPrivateSubnetCIDR
      AvailabilityZone:
        Fn::Select:
        - 0
        - Fn::GetAZs: ''
      MapPublicIpOnLaunch: true
      Tags:
      - Key: Name
        Value:
          Fn::Sub:
          - "${EnivronmentName} Private Subnet (AZ1)"
          - EnivronmentName:
              Ref: EnvironmentName
  SecondPrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: SecondPrivateSubnetCIDR
      AvailabilityZone:
        Fn::Select:
        - 1
        - Fn::GetAZs: ''
      MapPublicIpOnLaunch: true
      Tags:
      - Key: Name
        Value:
          Fn::Sub:
          - "${EnivronmentName} Private Subnet (AZ2)"
          - EnivronmentName:
              Ref: EnvironmentName
  FirstNatGatewayEIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc
  SecondNatGatewayEIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc
  FirstNatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt: FirstNatGatewayEIP.AllocationId
      SubnetId:
        Ref: FirstPublicSubnet
  SecondNatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt: SecondNatGatewayEIP.AllocationId
      SubnetId:
        Ref: SecondPublicSubnet
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value:
          Fn::Sub:
          - "${EnivronmentName} Public Routes"
          - EnivronmentName:
              Ref: EnvironmentName
  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway
  FirstPublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      SubnetId:
        Ref: FirstPublicSubnet
  SecondPublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      SubnetId:
        Ref: SecondPublicSubnet
  FirstPrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value:
          Fn::Sub:
          - "${EnivronmentName} Private Routes (AZ1)"
          - EnivronmentName:
              Ref: EnvironmentName
  DefaultFirstPrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: FirstPrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: FirstNatGateway
  FirstPrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: FirstPrivateRouteTable
      SubnetId:
        Ref: FirstPrivateSubnet
  SecondPrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value:
          Fn::Sub:
          - "${EnivronmentName} Private Routes (AZ2)"
          - EnivronmentName:
              Ref: EnvironmentName
  DefaultSecondPrivateRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId:
        Ref: SecondPrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: SecondNatGateway
  SecondPrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: SecondPrivateRouteTable
      SubnetId:
        Ref: SecondPrivateSubnet
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Ref: VPC
      GroupDescription: allow 80 and 22
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        FromPort: 22
        ToPort: 22
        IpProtocol: tcp
      - CidrIp: 0.0.0.0/0
        FromPort: 80
        ToPort: 80
        IpProtocol: tcp
      - CidrIp: 0.0.0.0/0
        FromPort: 3306
        ToPort: 3306
        IpProtocol: tcp
      - CidrIp: 0.0.0.0/0
        FromPort: -1
        ToPort: -1
        IpProtocol: icmp
  MyDB:
    Type: AWS::RDS::DBInstance
    Properties:
      DBInstanceClass:
        Ref: DBInstanceClass
      AllocatedStorage:
        Ref: DBAllocatedStorage
      Engine: MySQL
      EngineVersion: 8.0.16
      MasterUsername:
        Ref: DBUsername
      MasterUserPassword:
        Ref: DBPassword
    DependsOn: myDBSubnetGroup
  myDBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Database Subnet Group
      SubnetIds:
      - Ref: FirstPrivateSubnet
      - Ref: SecondPrivateSubnet
  myALBSecuirtyGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Ref: VPC
      GroupDescription: Enable HTTP/HTTPS Access
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        FromPort: 80
        ToPort: 80
        IpProtocol: tcp
      - CidrIp: 0.0.0.0/0
        FromPort: 443
        ToPort: 443
        IpProtocol: tcp
  MyLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internet-facing
      IpAddressType: ipv4
      Subnets:
      - Ref: FirstPublicSubnet
      - Ref: SecondPublicSubnet
      SecurityGroups:
      - Ref: myALBSecuirtyGroup
      Type: application
  myListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
      - Type: forward
        TargetGroupArn:
          Ref: myTargetGroup
      LoadBalancerArn:
        Ref: MyLoadBalancer
      Port: 80
      Protocol: HTTP
  myTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 80
      Protocol: HTTP
      VpcId:
        Ref: VPC
  myASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: Scalable Web
      AvailabilityZones:
      - Fn::Select:
        - 0
        - Fn::GetAZs: ''
      - Fn::Select:
        - 1
        - Fn::GetAZs: ''
      LaunchConfigurationName:
        Ref: myLaunchConfig
      MinSize: '2'
      MaxSize: '4'
      VPCZoneIdentifier:
      - Ref: FirstPublicSubnet
      - Ref: SecondPublicSubnet
  myLaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId: ami-01d025118d8e760db
      InstanceType: t2.micro
      SecurityGroups:
      - Ref: InstanceSecurityGroup
      BlockDeviceMappings:
      - DeviceName: "/dev/sdm"
        Ebs:
          VolumeType: io1
          Iops: 200
          DeleteOnTermination: true
          VolumeSize: 20
Outputs:
  ALBDNS:
    Value:
      Fn::Join:
      - ''
      - - http://
        - Fn::GetAtt: MyLoadBalancer.DNSName
    Description: Application Load Balancer - DNS Name
